# mihf05

./: README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  .gitignore  Dockerfile  deploy.sh  docker-compose.coolify.yml  docker-entrypoint.sh  fly.toml  pyproject.toml  railway.toml  requirements.txt
backend/.coolify/: config.yml  coolify.json
backend/alembic/: env.py
backend/app/: initial_data.py  main.py
backend/app/core/: config.py  security.py
backend/app/crud/: crud_salary.py  crud_user.py
backend/app/db/: session.py
backend/app/models/: __init__.py  loan.py  relationships.py  salary.py  user.py
backend/app/routers/: auth.py  salary.py  users.py
backend/app/schemas/: salary.py  user.py
backend/app/scripts/: update_password.py
backend/app/tests/: test_db_connection.py  test_db_direct.py
frontend/: .env.development  .env.production  build.sh  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  serve.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/: ErrorBoundary.tsx  Layout.tsx  TestPage.tsx
frontend/src/components/auth/: LoginForm.tsx
frontend/src/components/dashboard/: EmployeeDashboard.tsx  HRDashboard.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/utils/: api.ts
